Add simple icon to be used for the NuGet package.

--- a/src/ICanHazDadJokeSharp/ICanHazDadJokeSharp.csproj
+++ b/src/ICanHazDadJokeSharp/ICanHazDadJokeSharp.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="Assets\icon.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="System.Text.Json" Version="7.0.0" />
   </ItemGroup>
 
