--- a/src/ICanHazDadJokeSharp/ICanHazDadJokeSharp.csproj
+++ b/src/ICanHazDadJokeSharp/ICanHazDadJokeSharp.csproj
@@ -4,40 +4,29 @@
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<Title>ICanHazDadJokeSharp</Title>
-		<Version>0.0.2</Version>
+		<Version>0.0.3</Version>
 		<Authors>tsjdev-apps</Authors>
 		<Company>tsjdev-apps</Company>
 		<Copyright>© Thomas Sebastian Jensen | 2017-2023</Copyright>
 		<PackageProjectUrl>https://github.com/tsjdev-apps/ICanHazDadJokeSharp</PackageProjectUrl>
-		<PackageIcon>Assets\icon.png</PackageIcon>
+		<PackageIcon>icon.png</PackageIcon>
 		<RepositoryUrl>https://github.com/tsjdev-apps/ICanHazDadJokeSharp</RepositoryUrl>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>ICanHazDadJoke, Wrapper, Dad Jokes</PackageTags>
 		<PackageReleaseNotes>
-			- Add new method to get a joke as an image
 			- NuGet packages updates
-			- Code improvements
 		</PackageReleaseNotes>
 		<Description>Simple .NET Wrapper for the ICanHazDadJoke.com website to get a random dad joke.</Description>
 		<NeutralLanguage>en</NeutralLanguage>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Content Include="Assets\icon.png">
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</Content>
-	</ItemGroup>
-
-	<ItemGroup>
 		<PackageReference Include="System.Text.Json" Version="7.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Update="Assets\icon.png">
-			<Pack>True</Pack>
-			<PackagePath>\</PackagePath>
-		</None>
+		<None Include="icon.png" Pack="true" PackagePath=""/>
 	</ItemGroup>
 
 </Project>
